# open-MaStR

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  RELEASE_PROCEDURE.md  USERS.cff  config.py  datapackage.json  docker-compose.yml  environment.yml  local_db.py  main.py  mastr_biomass.json  mastr_biomass_download.py  mastr_biomass_process.py  mastr_hydro.json  mastr_hydro_download.py  mastr_hydro_process.py  mastr_power_unit_download.py  mastr_solar.json  mastr_solar_download.py  mastr_solar_process.py  mastr_storage_units_download.py  mastr_wind.json  mastr_wind_download.py  mastr_wind_process.py  mkdocs.yml  paper.bib  paper.md  (+11 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template_bug.md  issue_template_feature.md  issue_template_user_kudos.md
.github/workflows/: ci-develop.yml  ci-feature-#202-xmlparser.yml  ci-production.yml  ci-test.yml  ci.yml  extend_user_cff.yml  pypi-publish.yml  test-pypi-publish.yml  test_ci_workflow.yml
docs/: advanced.md  advanced.rst  analyze.rst  basic_usage.rst  conf.py  configuration.rst  data-release-notes.md  data_documentation.rst  datapackage_151.json  dataset.md  development.rst  download.rst  getting_started.md  getting_started.rst  index.md  index.rst  modules.rst  open_mastr.postprocessing.rst  open_mastr.rst  open_mastr.soap_api.rst  postprocessing.rst  reference.md  requirements.txt  soap_api.rst
docs/_data/: raw_data.rst
docs/_static/: custom.css
docs/advanced/: api_download.md  bulk_download.md  configuration.md
docs/development/: changelog_mirror.md  contributing_mirror.md  release_procedure_mirror.md
docs/raw/: bnetza_mastr_nuclear_raw.csv  bnetza_mastr_storage_raw.csv
docs/reference/: advanced.md  basic.md  open_mastr.postprocessing.rst  open_mastr.rst  open_mastr.soap_api.metadata.rst  open_mastr.soap_api.rst  open_mastr.utils.rst
import-api/: datapackage-UML.ipynb  datapackage.json  main.py  mastr_biomass_download.py  mastr_hydro.json  mastr_hydro_download.py  mastr_power_unit_download.py  mastr_solar.json  mastr_solar_download.py  mastr_storage.json  mastr_storage_units_download.py  mastr_structure.graphml  mastr_wind.json  mastr_wind_download.py  mastr_wind_process.py  requirement.yml  sessions.py  test.py  utils.py
jupyter/: OEP_MaStR_analyze.ipynb
open_mastr/: __init__.py  data_io.py  dummy_ci.py  mastr-download.py  mastr.py  mastr_download.py  orm.py  settings.py
open_mastr/ontology/: README.md  oeo.omn
open_mastr/postprocessing/: OEP_MaStR_OPSD_Comparison.ipynb  OEP_MaStR_cleaning.ipynb  cleaning.py  helpers.py  postprocessing.py  requirements_pp.txt  turbine_match.py
open_mastr/soap_api/: __init__.py  config.py  db_models.py  download.py  main.py  main_revised.py  mastr_biomass_download.py  mastr_biomass_process.py  mastr_combustion_download.py  mastr_combustion_process.py  mastr_general_download.py  mastr_gsgk_download.py  mastr_gsgk_process.py  mastr_hydro_download.py  mastr_hydro_process.py  mastr_nuclear_download.py  mastr_nuclear_process.py  mastr_power_unit_download.py  mastr_solar_download.py  mastr_solar_process.py  mastr_storage_download.py  mastr_storage_process.py  mastr_storage_units_download.py  mastr_wind_download.py  mastr_wind_process.py  mastr_wind_processing.py  mirror.py  orm.py  parallel.py  prototype_mastr_reflected.py  readme.md  sessions.py  utils.py
open_mastr/utils/: Dockerfile.postgis  config.py  constants.py  credentials.py  data_io.py  docker-compose.yml  docs.py  helpers.py  orm.py  tools.py
open_mastr/xml_download/: colums_to_replace.py  metadata.py  utils_cleansing_bulk.py  utils_download_bulk.py  utils_write_sqlite.py  (+3 more)
postprocessing/: BNetzA_MaStR_API.ipynb  OEP-oedialect_MaStR_analyse.ipynb  OEP-oedialect_MaStR_region.ipynb  OEP_MaStR_OPSD_Comparison.ipynb  OEP_MaStR_analyze.ipynb  OEP_MaStR_cleansing.ipynb  OEP_MaStR_supplement_coords.ipynb  cleaning.py  environment.yml  helpers.py  orm.py  postprocessing.py  requirements_pp.txt  turbine_match.py
scripts/: Completeness_test.ipynb  Matching coordinates with districts.ipynb  analyse_deleted_units.py  mirror_mastr_csv_export.py  mirror_mastr_dump.py  mirror_mastr_processing_pipeline.py  mirror_mastr_update_latest.py
soap_api/: __init__.py  config.py  data-release-notes.md  main.py  mastr_biomass_download.py  mastr_biomass_process.py  mastr_combustion_download.py  mastr_combustion_process.py  mastr_general_download.py  mastr_gsgk_download.py  mastr_gsgk_process.py  mastr_hydro_download.py  mastr_hydro_process.py  mastr_nuclear_download.py  mastr_nuclear_process.py  mastr_power_unit_download.py  mastr_solar_download.py  mastr_solar_process.py  mastr_storage_download.py  mastr_storage_process.py  mastr_storage_units_download.py  mastr_structure.graphml  mastr_wind_download.py  mastr_wind_process.py  mastr_wind_processing.py  parallel.py  readme.md  sessions.py  utils.py  versions.md
tests/: conftest.py  preparation.py  test_ci.py  test_credentials.py  test_helpers.py  test_mastr.py  test_orm.py  test_parallel_download.py  test_requirements.txt  test_utils_download_bulk.py
xml_parser/: mastr.py  metadata.py  utils.py
(+81 files in other folders)
