[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "open_mastr"
version = "0.14.5"
dependencies = [
  "pandas>=2.2.2",
  "numpy",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "zeep",
  "tqdm",
  "requests",
  "keyring",
  "pyyaml",
  "xmltodict",
]

requires-python = ">=3.9, <4"
authors = [
  {name = "Hülk Ludwig"},
  {name = "Pleßmann Guido"},
  {name = "Muschner Christoph"},
  {name = "Kotthoff Florian"},
  {name = "Tepe Deniz"},
  {name = "Amme Jonathan"},
  {name = "Open Energy Family"},
]

maintainers = [
  {name = "Florian Kotthoff"},
  {name = "Jonathan Amme", email = "jonathan.amme@rl-institut.de"},
  {name = "Ludwig Hülk", email = "datenzentrum@rl-institut.de"},
  {name = "Christoph Muschner"},
]
description = "A package that provides an interface for downloading and processing the data of the Marktstammdatenregister (MaStR)"
readme = "README.rst"
license = {text = "AGPL-3.0-or-later" }
keywords = ["Markstammdatenregister", "Energy", "Dataset", "Solar", "Wind", "Energy-data", "OEP", "OpenEnergyFamily"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pylint",
  "pytest",
  "pytest-dependency",
  "xmltodict",
  "pre-commit",
  "bump2version",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mkdocs-include-markdown-plugin",
  "mike",
  "black",
]

[project.urls]
Homepage = "https://github.com/OpenEnergyPlatform/open-MaStR"
Documentation = "https://open-mastr.readthedocs.io/"
Repository = "https://github.com/OpenEnergyPlatform/open-MaStR"
"Bug Tracker" = "https://github.com/OpenEnergyPlatform/open-MaStR/issues"
Changelog = "https://github.com/OpenEnergyPlatform/open-MaStR/blob/production/CHANGELOG.md"

[tool.setuptools.package-data]
open_mastr = [
  "utils/config/*.yml",
  "soap_api/metadata/LICENSE",
]

[tool.setuptools.packages.find]
include = ["open_mastr", "open_mastr.soap_api", "open_mastr.soap_api.metadata", "open_mastr.utils", "open_mastr.utils.config", "open_mastr.xml_download"] # package names should match these glob patterns (["*"] by default)

# from setup.py - not yet included in here
# download_url="https://github.com/OpenEnergyPlatform/open-MaStR/archive""/refs/tags/v0.14.5.tar.gz",
